Kubernetes/kustomize/base/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  type: ClusterIP
  ports:
    - name: application
      port: 8080
      targetPort: 8080
  selector:
    app: application
